Remove scrolling when mobile menu is out, adjust transition for hamburger link, fix mobile element.popout spacing

--- a/framework/assets/css/themeblvd-rtl.css
+++ b/framework/assets/css/themeblvd-rtl.css
@@ -476,6 +476,9 @@ img.greyscale {
 .uppercase {
 	text-transform: uppercase;
 }
+.no-scroll {
+	overflow: hidden;
+}
 
 /* Images */
 img {
@@ -1416,8 +1419,8 @@ html {
 	position: absolute;
 	-webkit-transform-style: preserve-3d;
 	transform-style: preserve-3d;
-	-webkit-transition: -webkit-transform .2s cubic-bezier(0.04,.78,.35,.92), opacity .2s ease-in-out, top .2s ease-in-out;
-	transition: transform .2s cubic-bezier(0.04,.78,.35,.92), opacity .2s ease-in-out, top .2s ease-in-out;
+	-webkit-transition: -webkit-transform .2s cubic-bezier(0.04,.78,.35,.92), top .2s ease-in-out;
+	transition: transform .2s cubic-bezier(0.04,.78,.35,.92), top .2s ease-in-out;
 	width: 100%;
 	height: 2px;
 }
@@ -1439,7 +1442,11 @@ html {
 }
 .tb-nav-trigger.collapse .hamburger .middle,
 .tb-side-trigger.collapse .hamburger .middle {
-	opacity: 0;
+	margin-top: 0;
+	top: 50%;
+	-ms-transform: rotate(-45deg);
+	-webkit-transform: rotate(-45deg);
+	transform: rotate(-45deg);
 }
 .tb-nav-trigger .hamburger .bottom,
 .tb-side-trigger .hamburger .bottom {
@@ -1447,10 +1454,7 @@ html {
 }
 .tb-nav-trigger.collapse .hamburger .bottom,
 .tb-side-trigger.collapse .hamburger .bottom {
-	top: 50%;
-	-ms-transform: rotate(-45deg);
-	-webkit-transform: rotate(-45deg);
-	transform: rotate(-45deg);
+	opacity: 0;
 }
 
 /* Side Panel Container */
@@ -1487,6 +1491,10 @@ html {
 	display: none;
 }
 @media (max-width: 991px) {
+	body.mobile-menu-right-on,
+	body.mobile-menu-left-on {
+		overflow: hidden;
+	}
 	.tb-mobile-menu-wrapper {
 		border: 0;
 		border-radius: 0;
@@ -4830,10 +4838,10 @@ button.mfp-arrow:active {
 		margin-left: -20px;
 	}
 	.element-section > .element.popout.first {
-		margin-top: -30px;
+		margin-top: -60px;
 	}
 	.element-section > .element.popout.last {
-		margin-bottom: -30px;
+		margin-bottom: -60px;
 	}
 }
 .element-section > .element.bg-content,
